Undo last commit and don't try to lock vnodes in lfs_unmark_dirop() as we may deadlock trying to write the superblock.

Should fix PR #43503 Can't create device nodes on LFS.